# detray

./: CMakeLists.txt
cmake/: detray-compiler-options-cpp.cmake  detray-compiler-options-cuda.cmake
core/include/detray/propagator/: rk_stepper.ipp
tests/: CMakeLists.txt
tests/common/include/tests/common/tools/: time_logger.hpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/cuda/: CMakeLists.txt  TimeLogger.hpp  rk_stepper_cuda.cpp
tests/unit_tests/vecpar/: CMakeLists.txt  TimeLogger.hpp  rk_stepper_cuda_clang.cpp  rk_stepper_cuda_clang_kernel.hpp  rk_stepper_vecpar.cpp  rk_stepper_vecpar_host_mr.cpp  rk_stepper_vecpar_mng_mr.cpp  rk_stepper_vecpar_ompt_host_mr.cpp
tests/unit_tests/vecpar/algorithm/: common.hpp  rk_stepper_bound_vecpar.hpp  rk_stepper_free_vecpar.hpp
tests/unit_tests/vecpar/host_memory/: rk_stepper_vecpar_hm.cpp
tests/unit_tests/vecpar/managed_memory/: rk_stepper_vecpar_mm.cpp
tests/unit_tests/vecpar/scripts/: reproducibility_aarch64.sh  reproducibility_x86_64_and_nvidia_GPU.sh
